<resources>
    <string name="app_name">BlueToothGeo</string>
    <string name="action_settings">Settings</string>
    <string name="submit">refresh</string>
    <string name="distance_hint"> </string>
    <string name="angel_hint">No angel shown yet!</string>
    <string name="device_hint"> </string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="connecting">connecting</string>
    <string name="unknown_service">unknown_service</string>
    <string name="unknown_characteristic">unknown_characteristic</string>
    <string name="label_device_address">Mac:</string>
    <string name="label_state">Connection_State:</string>
    <string name="label_data">Rssi:</string>
    <string name="no_data">no rssi</string>
    <string name="device_name">Device:</string>
    <string name="label_distance">Distance:</string>
    <string name="chat">chat</string>
    <string name="not_connected">not_connected</string>
    <string name="send">send</string>
    <string name="label_service">gatt service List:</string>
    <string name="advertise">advertise</string>
    <string name="advertise1">advertis(ing)</string>
    <string name="advertise2">advertise(failure)</string>
    <string name="advertise3">"Advertise(NoSupported)"</string>
    <string name="advertise4">advertise(success)</string>
    <string name="scan1">blescan</string>
    <string name="scan2">scan(batchResult)</string>
    <string name="scan3">scan(success)</string>
    <string name="scan4">scan(failed)</string>
    <string name="scan5">scan(ing)</string>
    <string name="clear">clear</string>
    <string name="calibrate">calibrate</string>
    <string name="connect">connect</string>
    <string name="sensor">sensor</string>
    <string name="sensor1">sensing</string>
</resources>
