<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="152dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/device_hint"
                android:textSize="18sp" />
            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:textSize="12sp"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_distance"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/distance_hint"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/data_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="18sp" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/calibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calibrate"
                android:textSize="12sp"
                app:layout_constraintRight_toRightOf="parent"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/advertise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advertise"
                app:layout_constraintBottom_toTopOf="@id/button_sensor"
                android:textSize="12sp"/>

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bleScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan1"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor"
                android:textSize="12sp"/>
            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="12sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="9dp"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/button_sensor"
                app:layout_constraintBottom_toTopOf="@id/lines"
                android:stackFromBottom="false"
                android:transcriptMode="alwaysScroll" />
        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="3dp"
        android:contentDescription="@string/submit"

        android:src="@drawable/search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lines"
        app:rippleColor="#141414" />

    <android.support.design.widget.FloatingActionButton

        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="3dp"
        android:contentDescription="@string/chat"
        android:src="@drawable/bluetooth"

        app:layout_constraintBottom_toTopOf="@id/lines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:rippleColor="#141414" />

    <LinearLayout
        android:id = "@+id/lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
        >

        <EditText
            android:id="@+id/edit_text_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:focusable="true"
            android:inputType="text"
            android:autofillHints="text"
            android:hint="@string/device_hint"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>